--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<article class="main-article" style="background-image: url(img/back2.png);">
 				<div class="main-article__content">
 			        <h2 class="main-article__header">HI,I'M - QA Engineer </h2>
-					<p class="main-article__paragraph">Внимательно создам баг-репорты,смешно пошучу в слаке,найду общий язык с командой разработки!</p>
+					<p class="main-article__paragraph">Внимательно создам баг-репорты,качественно проведу регресс,проверю логи,найду общий язык с командой разработки!</p>
 					<a class="hero_link" href="http://t.me/akiljanio" target="_blank"><i class='bx bxl-telegram'></i></a>
 					<a class="hero_link" href="https://vk.com/mikolaj0" target="_blank"><i class='bx bxl-vk'></i></a>
 					<a class="hero_link" href="https://github.com/Akiljanio/" target="_blank"><i class='bx bxl-github'></i></a>
